add "calls N subs" to treemap mouseover box
string eval merging - must allow at least viewing of source for called subs defined in a nested eval

=head2 Changes in Devel::NYTProf 3.12 (svn XXXX)

XXX TODO
Refine and document handing of string evals

  Enabled savesrc=1 by default.

  Corrected typos in nytprofhtml docs thanks to chocolate@cpan.org

=head2 Changes in Devel::NYTProf 3.11 (svn 1171) 12th March 2010

  Fixed assorted issues on Windows thanks to Jan Dubois.
  Fixed assorted issues 64bit systems thanks to Jan Dubois.

  Refactored I/O to create an API that encapsulates the data
    file format, thanks to Nicholas Clark.
  Updated and optimized nytprofmerge to use the new API
    yielding a significant speed boost, thanks to Nicholas Clark.

=head2 Changes in Devel::NYTProf 3.02 (svn 1094) 5th March 2010

  Fixed handling of usecputime=1 option and updated
    docs to note the significant limitations.
  Fixed association of XS subs to source files
    in some edge cases thanks to Nicholas Clark.
  Fixed nytprofmerge edge cases thanks to Nicholas Clark.

  Added high-resolution (100ns) timer for Mac OS X
    many thanks to Markus Peter.
  Added assorted optimizations thanks to Nicholas Clark.

  Changed subroutine profiler to be slightly more efficient.
  Changed some tests to be more informative on failure.
  Changed nytprofhtml to be smarter when source isn't available.
  Changed nytprofhtml to show sort arrow on sortable tables.

  Removed Devel::NYTProf::PgPLPerl module. That's now a separate
    PostgreSQL::PLPerl::NYTProf distribution.

  Updated docs to include a note about timing on Windows.
  Updated docs to include a section about making NYTProf faster.

=head2 Changes in Devel::NYTProf 3.01 (svn r1005) 28th Dec 2009

  Fixed (removed) use of vfscanf() which broke on Windows.
  Fixed version number in nytprofmerge.

  Added documentation to nytprofcg and nytprofmerge.

  Updated NYTProf docs, including noting major contributors.